--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,12 +2,17 @@
 
 buildscript {
 
+    ext {
+        agp_version = '7.4.0'
+      agp_version1 = agp_version
+      agp_version2 = '8.1.1'
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath "com.android.tools.build:gradle:$agp_version2"
         classpath 'com.google.gms:google-services:4.3.15'
 
         // NOTE: Do not place your application dependencies here; they belong
